add projeto; add get de leads;

--- a/force-app/main/default/classes/leadApi.cls
+++ b/force-app/main/default/classes/leadApi.cls
@@ -1,5 +1,17 @@
-public with sharing class leadApi {
-    public leadApi() {
+@RestResource(urlMapping = '/Evento/Leads/*')
 
+global with sharing class leadApi {
+
+    @HttpGet
+    global static void getLeads() {
+
+        RestResponse resultRest = RestContext.response;
+
+        List<Lead> leadsList = [SELECT Id, Name, Email, Phone FROM Lead];
+
+        resultRest.responseBody = Blob.valueOf(JSON.serializePretty(leadsList));
+
+        resultRest.statusCode = 200;
     }
+
 }
